# sequencer64

./: INSTALL  Makefile.am  README  bootstrap  configure.ac  strap_functions
Seq64cli/: Makefile.am
contrib/configs/: sequencer64.usr.example
libseq64/include/: calculations.hpp  coloring.hpp  easy_macros.h  gdk_basic_keys.h  keystroke.hpp  midifile.hpp  perform.hpp  rc_settings.hpp  sequence.hpp  user_settings.hpp
libseq64/src/: Makefile.am  event.cpp  perform.cpp  sequence.cpp
seq_gtkmm2/include/: mainwnd.hpp
seq_gtkmm2/src/: mainwnd.cpp  seqedit.cpp
seq_qt5/include/: Makefile.am  disabled-Globals.hpp  qcoloring.hpp  qperfnames.hpp  qperfroll.hpp
seq_qt5/src/: Makefile.am  qcoloring.cpp  qperfeditframe.cpp  qperfnames.cpp  qperfroll.cpp  qperftime.cpp  qseqeditframe.cpp  qseqroll.cpp  qseqtime.cpp  qsliveframe.cpp  qsmaintime.cpp  qstriggereditor.cpp
